--- a/backend/src/assets/base.css
+++ b/backend/src/assets/base.css
@@ -72,3 +72,17 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.slidebox {
+  border: 1px dotted rgba(117, 209, 41, 0.8);
+  border-radius: 5px;
+  padding: 20px;
+  background-color: #2c3e50;
+  color: white;
+}
+
+.slidebox:active {
+  background-color: #3e8e41;
+  box-shadow: -15px 0px #9e9797;
+  transform: translateX(15px);
+}
