Finished https://vuejs.org/guide/quick-start.html#splitting-up-the-modules and added custom CSS for internal button counter

--- a/backend/src/assets/base.css
+++ b/backend/src/assets/base.css
@@ -86,3 +86,14 @@ body {
   box-shadow: -15px 0px #9e9797;
   transform: translateX(15px);
 }
+
+.btnCountDot {
+  position: absolute;
+  top: -6px;
+  background-color: cadetblue;
+  right: -6px;
+  padding: 5px;
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+}
