--- a/backend/src/assets/main.css
+++ b/backend/src/assets/main.css
@@ -1,6 +1,6 @@
 @import './base.css';
 
-#app {
+#app, #app2 {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -28,8 +28,7 @@ a,
   }
 
   #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: block;
     padding: 0 2rem;
   }
 }
