--- a/backend/src/assets/main.css
+++ b/backend/src/assets/main.css
@@ -27,6 +27,7 @@
   height: 100px;
   grid-row-start: 1;
   grid-row-end: 1;
+  vertical-align: middle;
 }
 
 .uicontainer {
@@ -35,6 +36,22 @@
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr;
   min-height: inherit;
+}
+
+.activeBtn {
+  background-color: green;
+}
+
+.activeBtn, .inactiveBtn {
+  color: white;
+  border-radius: 2em;
+  text-align: center;
+}
+
+.inactiveBtn {
+  background-color: red;
+  box-shadow: -15px 0px #9e9797;
+  transform: translateX(15px);
 }
 
 a,
@@ -54,6 +71,7 @@ a,
   body {
     display: flex;
     place-items: center;
+    color: black;
   }
 
 }
