0E... stopped at top of page https://vuejs.org/guide/essentials/reactivity-fundamentals.html

--- a/backend/src/assets/main.css
+++ b/backend/src/assets/main.css
@@ -55,6 +55,14 @@
   transform: translateX(15px);
 }
 
+#idSample {
+  font-weight: bold;
+}
+
+.classSample {
+  color:red;
+}
+
 a,
 .green {
   text-decoration: none;
